# lre

./: README.md  dev.ipynb  pyproject.toml
lre/: __init__.py  basis.py  compile.py  curvature.py  linalg.py  lre.py  opt.py
